fix/activity handler body
